allow loading internal paths and get timer sound from configs

--- a/configs/my_paths.yml
+++ b/configs/my_paths.yml
@@ -1,9 +1,13 @@
-# files home where all folders and files live
+# internal file paths relative from repository root
+timer_sound: configs/gong.mp3
+
+# files home where all external files live
 # has to be in $HOME directory
-home: Shared/database
+external: Shared/database
 
 # relative path from home to files for the specific files
 debt: tracker/finances/debt.csv
 periodic_debt: tracker/finances/periodic_debt.yml
 expenses: tracker/finances/expenses.csv
 keepass: authentification/kiesel_markus_pw.kdbx
+
