--- a/configs/my_paths.yml
+++ b/configs/my_paths.yml
@@ -3,4 +3,5 @@ debt: Shared/database/tracker/finances/debt.csv
 periodic_debt: Shared/database/tracker/finances/periodic_debt.yml
 expenses: Shared/database/tracker/finances/expenses.csv
 keepass: Shared/database/authentification/kiesel_markus_pw.kdbx
+food: Shared/database/tracker/health/food.csv
 
